# starclass

./: .gitignore  README.md
star_bert/: .env.example  .gitignore  README.md  eda.py  pipeline.py  pyproject.toml  trainer.py  tuner.py
star_bert/data/: data.csv
star_modernbert/: .env.example  .gitignore  README.md  pipeline.py  pyproject.toml  requirements.txt  trainer.py  tuner.py
star_modernbert/data/: data.csv  exported_df_no_outliers.csv
